# darkhttpd-rs

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md  build.rs  callgraph.py  darkhttpd.c
devel/: run-tests  test.py  test_mimemap.py
src/: default_mimetypes.txt  lib.rs  main.rs  test.rs
tests/: integration.rs  util.rs
