[package]
name = "darkhttpd"
version = "0.1.0"
authors = ["Tom Dryer <tomdryer.com@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
libc = "0.2.95"
nix = "0.21.0"

[dependencies.chrono]
version = "0.4.19"
default-features = false
features = ["std", "clock"]

[dev-dependencies]
tempfile = "3"
test-case = "1.1.0"
